# AudioTrainer

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  fastapi_app.py  streamlit_app.py
docs/: architecture.md  library_usage.md  roadmap.md
examples/: live_pitch_monitor.py  pitch_from_file.py  pronunciation_demo.py  voice_profile_demo.py
src/audiotrainer/: __init__.py  cli.py
src/audiotrainer/api/: __init__.py  schemas.py  service.py
src/audiotrainer/audio/: __init__.py  device.py  framing.py  io.py  preprocessing.py
src/audiotrainer/coaching/: __init__.py  feedback.py  scoring.py  sessions.py
src/audiotrainer/instruments/: __init__.py  classifier.py  features.py
src/audiotrainer/pitch/: __init__.py  autocorrelation.py  notes.py  smoothing.py  yin.py
src/audiotrainer/speech/: __init__.py  pronunciation.py  prosody.py  voice_profile.py
src/audiotrainer/transcription/: __init__.py  midi_export.py  note_events.py  score_export.py
src/audiotrainer/visualization/: __init__.py  piano_roll.py  pitch_plot.py  score_plot.py  spectrogram.py
tests/: test_instruments.py  test_notes.py  test_pitch.py  test_scoring.py  test_speech_voice.py  test_transcription.py
