[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiotrainer"
version = "0.1.0"
description = "Efficient audio coaching tools for pitch, transcription, speech prosody, voice profiling, and instruments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AudioTrainer contributors" }]
keywords = ["audio", "pitch-detection", "music", "speech", "voice", "coaching"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2",
  "typer>=0.9",
  "rich>=13",
  "soundfile>=0.12",
]

[project.optional-dependencies]
app = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "streamlit>=1.32",
  "matplotlib>=3.7",
  "sounddevice>=0.4",
  "python-multipart>=0.0.9",
]
visualization = ["matplotlib>=3.7"]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/Thendyom/AudioTrainer"
Repository = "https://github.com/Thendyom/AudioTrainer"
Issues = "https://github.com/Thendyom/AudioTrainer/issues"

[project.scripts]
audiotrainer = "audiotrainer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
